--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
   </head>
   <body class="page">
-    <header class="header corners">
+    <header class="header decorated-zone">
       <span class="element-rec" aria-hidden="true">REC</span>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
@@ -221,7 +221,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer corners"><h2 class="footer__title">focus</h2>
+    <footer class="footer decorated-zone"><h2 class="footer__title">focus</h2>
     <script src="./scripts/script.js"></script>
   </footer>
   </body>
