--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark light" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="dark light">
     <title>Сложно сосредоточиться</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/globals.css" />
-    <link rel="stylesheet" href="./styles/variables.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-<link rel="stylesheet" href="./styles/dark.css" />
-<link rel="stylesheet" href="./styles/light.css" />
-    <link rel="icon" href="./images/favicon.ico" sizes="any" />
-    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="./images/mobile-icon.png" type="image/png" />
-    
-  </head>
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/style.css">
+<link rel="stylesheet" href="./styles/dark.css">
+<link rel="stylesheet" href="./styles/light.css">
+    <link rel="icon" href="./images/favicon.ico" sizes="any">
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png" type="image/png">
+</head>
   <body class="page">
     <header class="header decorated-zone">
       <span class="element-rec" aria-hidden="true">REC</span>
@@ -47,19 +46,15 @@
         </ul>
       </nav>
       <h1 class="header__title">no focus</h1>
-      <div class="header__text-content">
       <p class="header-content text-decor">Что делать, когда не можешь делать ничего
         Или почему нам так сложно сконцентрироваться, 
         особенно когда очень надо
       </p>
-      </div>
     </header>
     <main class="main">
       <section class="main-section section-concentrated">
-        <div class="article-column">
           <h2 class="main-title main-title_no_padding">Почему сосредоточиться так сложно</h2>
-        </div>
-        <div class="article-column">
+          <div class="article-column"> 
           <article class="article">
             <h3 class="article-title text-decor">Многозадачность</h3>
             <p class="article-text">
@@ -88,7 +83,7 @@
               отвлекаешься, тем больше удовольствия получаешь.
             </p>
           </article>
-        </div>
+          </div>
       </section>
       <section class="main-section section-wrap">
         <h2 class="main-title">Что снижает концентрацию внимания?</h2>
@@ -129,7 +124,6 @@
           </article>
         </div>
       </section>
-      <main class="main">
       <section class="main-section section-concentrated">
         <div class="article-column">
           <h2 class="main-title main-title_no_padding">
@@ -199,23 +193,23 @@
       <section class="main-section image-gallery">
         <h2 class="article-title text-decor">А можно в картинках?</h2>
         <div class="image-gallery-wrapper">
-          <picture>
+          <picture class="gallery">
             <source srcset="./images/sunset.png">
             <img class="article-image" src="./images/sunset.png" loading="lazy" alt="Картинка с закатом">
           </picture>
-          <picture>
+          <picture class="gallery">
             <source srcset="./images/ice-cream.png">
             <img class="article-image" src="./images/ice-cream.png" loading="lazy" alt="Картинка с мороженым">
           </picture>
-          <picture>
+          <picture class="gallery">
             <source srcset="./images/tape.png">
             <img class="article-image" src="./images/tape.png" loading="lazy" alt="Картинка с кассетой">
           </picture>
-          <picture>
+          <picture class="gallery">
             <source srcset="./images/books.png">
             <img class="article-image" src="./images/books.png" loading="lazy" alt="Картинка с книгами">
           </picture>
-          <picture>
+          <picture class="gallery">
             <source srcset="./images/street.png">
             <img class="article-image" src="./images/street.png" loading="lazy" alt="Картинка города">
           </picture>
