--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
                 </ul>
             </nav>
             <h1 class="header__title">no focus</h1>
-            <p class="header-content text-decor">Что делать, когда не можешь делать ничего 
-              Или почему нам так сложно сконцентрироваться,особенно 
-              когда очень надо
-            </p>
+            <p class="header-content text-decor"> Что делать, когда не можешь делать ничего 
+              Или почему нам так сложно  сконцентрироваться, особенно когда очень надо</p>
         </header>
         <main class="main">
             <section class="main-section section-concentrated">
